# multinterp

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CubicInterp.html  CurvilinearInterpolation.html  LICENSE  MultivariateInterp.html  README.md  SKImagePieceWiseAffineInterp.html  SKLearnUnstructuredInterpolation.html  ScipyUnstructuredInterpolation.html  Triangulation.html  WarpedInterpolation copy.html  WarpedInterpolation.html  _GaussianProcessInterp.html  _KernelRidgeInterp.html  _PolynomialInterpolation copy.html  _PolynomialInterpolation.html  _SplineInterpolation.html  _UnstructuredInterp copy.html  _UnstructuredInterp.html  _WarpedInterp.html  _WarpedInterpOnInterp2D.html  _toc.yml  environment.yml  genindex.html  intro.html  markdown-notebooks.html  markdown.html  myst.yml  notebooks.html  noxfile.py  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml  tests.yml
_sources/: CubicInterp.ipynb  CurvilinearInterpolation.ipynb  MultivariateInterp.ipynb  SKImagePieceWiseAffineInterp.ipynb  SKLearnUnstructuredInterpolation.ipynb  ScipyUnstructuredInterpolation.ipynb  Triangulation.ipynb  WarpedInterpolation copy.ipynb  WarpedInterpolation.ipynb  _GaussianProcessInterp.ipynb  _KernelRidgeInterp.ipynb  _PolynomialInterpolation copy.ipynb  _PolynomialInterpolation.ipynb  _SplineInterpolation.ipynb  _UnstructuredInterp copy.ipynb  _UnstructuredInterp.ipynb  _WarpedInterp.ipynb  _WarpedInterpOnInterp2D.ipynb
docs/: CHANGELOG.md  README.md  conf.py  index.md
examples/: 01. Multivariate Interpolation copy.ipynb  01. Multivariate Interpolation.ipynb  02. Warped Interpolation.ipynb  03. Curvilinear Interpolation.ipynb  04. Piecewise Affine Interpolation.ipynb  05. Triangulation.ipynb  05._Triangulation.ipynb  06. Unstructured Interpolation.ipynb  07. Regression Interpolation.ipynb  Multivalued Interpolation.ipynb  Multivariate Interpolation with Derivatives.ipynb  gpytorch.ipynb
examples/00_Rectilinear/: 01. Multivariate Interpolation.ipynb  01._Multivariate_Interpolation.ipynb  01._Multivariate_Interpolation_copy.ipynb  Multivalued_Interpolation.ipynb  Multivariate Interpolation with Derivatives.ipynb  Multivariate_Interpolation_with_Derivatives.ipynb
examples/01_Curvilinear/: 02._Warped_Interpolation.ipynb  03. Curvilinear Interpolation.ipynb  03._Curvilinear_Interpolation.ipynb  04. Piecewise Affine Interpolation.ipynb  04._Piecewise_Affine_Interpolation.ipynb
examples/02_Unstructured/: 06. Unstructured Interpolation.ipynb  06._Unstructured_Interpolation.ipynb  07. Regression Interpolation.ipynb  07._Regression_Interpolation.ipynb  gpytorch.ipynb
multinterp/: __init__.py  _skimage.py  core.py  curvilinear.py  regression.py  regular.py  skimage.py  unstructured.py
multinterp/_build/.doctrees/: SKLearnUnstructuredInterpolation.doctree  ScipyUnstructuredInterpolation.doctree  Triangulation.doctree  WarpedInterpolation copy.doctree  WarpedInterpolation.doctree  _KernelRidgeInterp.doctree  _PolynomialInterpolation copy.doctree  _PolynomialInterpolation.doctree  _SplineInterpolation.doctree  _UnstructuredInterp copy.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree
multinterp/_build/html/: CubicInterp.html  MultivariateInterp.html  SKLearnUnstructuredInterpolation.html  WarpedInterpolation copy.html  WarpedInterpolation.html  _GaussianProcessInterp.html  _KernelRidgeInterp.html  _UnstructuredInterp.html  _WarpedInterp.html  _WarpedInterpOnInterp2D.html  genindex.html  markdown-notebooks.html  notebooks.html
multinterp/_build/jupyter_execute/: CurvilinearInterpolation.ipynb  SKLearnUnstructuredInterpolation.ipynb  WarpedInterpolation copy.ipynb  WarpedInterpolation.ipynb  _GaussianProcessInterp.ipynb  _PolynomialInterpolation.ipynb  _SplineInterpolation.ipynb  _UnstructuredInterp copy.ipynb  _UnstructuredInterp.ipynb  _WarpedInterp.ipynb  notebooks.ipynb
multinterp/backend/: __init__.py  _cupy.py  _jax.py  _numba.py  _scipy.py  _skimage.py
multinterp/backend/tests/: test_backend.py  test_sklearn.py
multinterp/tests/: test_multi.py  test_sklearn.py  test_unstructured.py
notebooks/: CubicInterp.py  CurvilinearInterpolation.ipynb  CurvilinearInterpolation.py  MultivariateInterp.ipynb  MultivariateInterp.py  SKImagePieceWiseAffineInterp.ipynb  SKImagePieceWiseAffineInterp.py  SKLearnUnstructuredInterpolation.ipynb  SKLearnUnstructuredInterpolation.py  ScipyUnstructuredInterpolation.ipynb  ScipyUnstructuredInterpolation.py  Triangulation.py  UnstructuredInterp.ipynb  WarpedInterp.ipynb  WarpedInterpOnInterp2D.ipynb  WarpedInterpolation copy.py  WarpedInterpolation.ipynb  WarpedInterpolation.py  _GaussianProcessInterp.ipynb  _GaussianProcessInterp.py  _KernelRidgeInterp.ipynb  _KernelRidgeInterp.py  _PolynomialInterpolation copy.ipynb  _PolynomialInterpolation copy.py  _PolynomialInterpolation.ipynb  _PolynomialInterpolation.py  _SplineInterpolation.ipynb  _SplineInterpolation.py  _UnstructuredInterp copy.ipynb  _UnstructuredInterp copy.py  _UnstructuredInterp.py  _WarpedInterp.py  _WarpedInterpOnInterp2D.ipynb  _WarpedInterpOnInterp2D.py  _config.yml  notebooks.ipynb  notebooks.py  requirements.txt
notebooks/_build/.doctrees/: CubicInterp.doctree  CurvilinearInterpolation.doctree  MultivariateInterp.doctree  SKImagePieceWiseAffineInterp.doctree  SKLearnUnstructuredInterpolation.doctree  ScipyUnstructuredInterpolation.doctree  Triangulation.doctree  WarpedInterpolation copy.doctree  WarpedInterpolation.doctree  _GaussianProcessInterp.doctree  _KernelRidgeInterp.doctree  _PolynomialInterpolation copy.doctree  _PolynomialInterpolation.doctree  _SplineInterpolation.doctree  _UnstructuredInterp.doctree  (+8 more)
src/multinterp/: SKLearn.vs.GPyTorch.ipynb  __init__.py  _version.py  core.py  curvilinear.py  example.py  gaussian.py  grids.py  regression.py  regular.py  unstructured.py  utilities.py
tests/: test_backend.py  test_curvilinear.py  test_package.py  test_regression.py  test_regular.py  test_unstructured.py
(+80 files in other folders)
